[package]
name = "conference_registration"
version = "0.1.0"
authors = ["Willi Kappler, grandor@gmx.de"]

[dependencies]
iron = "0.4"
handlebars-iron = "0.18"
router = "0.4"
mount = "0.2"
staticfile = "0.3"
rusqlite = "0.7"
chrono = "0.2"
regex = "0.1"
persistent = "0.2"
rustc-serialize = "0.3"
params = "0.4"
plugin = "0.2"
log = "0.3"
simplelog = "0.2"
lettre = "0.6.0"
rust-ini = "0.9"
oven = "0.4.0"
#cookie = "0.3.1"
cookie = "0.2.2"
