[package]
name = "conference_registration"
version = "0.2.0"
authors = ["Willi Kappler <grandor@gmx.de>"]

[dependencies]
iron = "0.5"
handlebars-iron = "0.24"
router = "0.5"
mount = "0.3"
staticfile = "0.4"
rusqlite = "0.12"
chrono = "0.3"
regex = "0.2"
persistent = "0.3"
rustc-serialize = "0.3"
params = "0.6"
plugin = "0.2"
log = "0.3"
simplelog = "0.4"
lettre = "0.5"
rust-ini = "0.10"
oven = "0.4.0"
#cookie = "0.3.1"
cookie = "0.2"
